# duckgame

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build_game.sh  build_sdl2pp.sh
client/: CMakeLists.txt  Makefile  actionlistener.h  animation.cpp  animation.h  client.cpp  client.h  clientprotocol.cpp  clientprotocol.h  duck_movement.cpp  eventlistener.h  game_action_sender.cpp  game_loop.cpp  game_loop.h  gamecontext.cpp  gamecontext.h  joinlobbymode.cpp  joinlobbymode.h  lobbycreatemode.cpp  lobbycreatemode.h  lobbymode.h  main.cpp  menuhandler.cpp  menuhandler.h  simpleeventlistener.cpp  simpleeventlistener.h  ui_loop.cpp  ui_loop.h
client/core/: CMakeLists.txt  base_lobby_state.cpp  base_lobby_state.h  game_action_sender.cpp  game_action_sender.h  game_loop.cpp  game_loop.h  game_manager.cpp  game_manager.h  game_state.h  game_state_recv.cpp  joinlobbymode.cpp  joinlobbymode.h  lobby_action_listener.cpp  lobby_action_listener.h  lobby_client_sender.cpp  lobby_client_sender.h  lobby_connector.cpp  lobby_connector.h  lobby_create_sender.cpp  lobby_create_sender.h  lobby_join_sender.cpp  lobby_join_sender.h  lobby_listener.h  lobby_state.h  lobbycreatemode.cpp  lobbycreatemode.h  play_state_recv.cpp  play_state_recv.h  play_state_sender.cpp  play_state_sender.h
client/core/lobby/: CMakeLists.txt  lobby_action_queue.cpp  lobby_action_queue.h  lobby_action_sender.cpp  lobby_action_sender.h  lobby_create_state.cpp  lobby_create_state.h  lobby_join_state.cpp  lobby_join_state.h  lobby_state_recv.cpp  lobby_state_recv.h
client/interfaz/: CMakeLists.txt  animation.cpp  animation.h  animation_dtos.h  camera.cpp  camera.h  drawer.cpp  drawer.h  event_handler.cpp  event_handler.h  loop_ui.cpp  loop_ui.h  sound_container.cpp  sound_container.h  sound_manager.cpp  sound_manager.h  texture_container.cpp  texture_container.h
client/interfaz/drawerUtils/: armor_drawer.h  (+11 more)
client/menu/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  menu.ui  menuAction.cpp  menuAction.h  menuhandler.cpp  menuhandler.h
common/: CMakeLists.txt  Makefile  clientprotocol.cpp  clientprotocol.h  clock.h  dtos.h  dtosgame.h  dtoslobby.h  dtosmap.h  dtosobject.h  dtosplayer.h  errors.h  event.cpp  event.h  gameevents.h  liberror.cpp  liberror.h  messenger.h  playerprotocol.cpp  playerprotocol.h  protocol.cpp  protocol.h  protocolerror.cpp  protocolerror.h  queue.h  resolver.h  resolvererror.h  reward.cpp  reward.h  serialerror.cpp  serialerror.h  serverprotocol.cpp  serverprotocol.h  socket.cpp  socket.h  thread.h
common/core/: CMakeLists.txt  Makefile  liberror.cpp  messenger.h  protocol.cpp  protocol.h  resolver.cpp  resolvererror.h  simplemessenger.cpp  simplemessenger.h  socket.cpp  socket.h  thread.h
editor/: CMakeLists.txt  Makefile  editorWindow.cpp  editorWindow.h  editorWindow.ui  loader.cpp  loader.h  main.cpp  tileset.cpp  tileset.h  types.h
editor/interface/: CMakeLists.txt  interface.cpp  interface.h  interface.ui
editor/playground/: CMakeLists.txt  playground.cpp  playground.h  playground.ui
server/: CMakeLists.txt  Makefile  box.cpp  box.h  controlid.h  controlledplayer.cpp  controlledplayer.h  controlnotifier.cpp  controlnotifier.h  controlreceiver.cpp  controlreceiver.h  gameerror.cpp  gameerror.h  lobby.cpp  lobby.h  lobbycontainer.cpp  lobbycontainer.h  lobbycontrol.cpp  lobbycontrol.h  lobbyprotocol.cpp  lobbyprotocol.h  main.cpp  match.cpp  match.h  matchacceptor.cpp  matchacceptor.h  matchaction.cpp  matchaction.h  matchobserver.h  matchqueue.cpp  matchqueue.h  matchserver.cpp  matchserver.h  matchstate.cpp  matchstate.h  player.cpp  player.h  playeracceptor.cpp  playeracceptor.h  playercontainer.cpp  (+9 more)
server/core/: CMakeLists.txt  configuration.cpp  configuration.h  match_state.cpp  match_state.h  matchobserver.h
server/logic/: CMakeLists.txt  action_command.cpp  ak47_weapon.cpp  ak47_weapon.h  armor.h  banana_weapon.h  box.cpp  box.h  bullet.cpp  bullet.h  cowboy_pistol_weapon.cpp  cowboy_pistol_weapon.h  dropped_item.cpp  dropped_item.h  duel_pistol.cpp  duel_pistol.h  grenade.cpp  grenade.h  grenade_weapon.cpp  grenade_weapon.h  item.cpp  item.h  laser_rifle_weapon.cpp  laser_rifle_weapon.h  magnum_weapon.cpp  magnum_weapon.h  match_logic.cpp  match_logic.h  match_map.cpp  match_map.h  match_queue.cpp  match_queue.h  pewpew_laser_weapon.cpp  pewpew_laser_weapon.h  physical_bullet.cpp  physical_bullet.h  physical_grenade.cpp  physical_object.cpp  physical_player.cpp  physical_player.h  (+11 more)
server/logic_server/: CMakeLists.txt  Makefile  action.cpp  action.h  action_command.cpp  action_command.h  armor.cpp  armor.h  box.cpp  box.h  collision.h  command.h  coordinates.cpp  coordinates.h  cowboy_pistol_weapon.cpp  cowboy_pistol_weapon.h  dropped_item.cpp  dropped_item.h  duel_pistol.cpp  duel_pistol.h  item.cpp  item.h  magnum_weapon.cpp  magnum_weapon.h  map_object.h  match_logic.cpp  match_logic.h  match_map.cpp  match_map.h  match_queue.cpp  match_queue.h  match_state.cpp  match_state.h  matchobserver.h  pewpew_laser_weapon.cpp  pewpew_laser_weapon.h  physical_bullet.cpp  physical_bullet.h  physical_object.cpp  physical_object.h  (+13 more)
server/simple_logic/: CMakeLists.txt  Makefile  simpleaction.cpp  simpleaction.h  simplebox.cpp  simplebox.h  simpleloop.cpp  simpleloop.h  simplequeue.cpp  simplequeue.h  simplereward.cpp  simplereward.h  simplestate.cpp  simplestate.h
tests/: CMakeLists.txt  Makefile  baseprotocol.cpp  foo.cpp  mockobserver.h  mocksocket.cpp  mocksocket.h  queuesocket.cpp  queuesocket.h  sharedsocket.cpp  sharedsocket.h  test_logic_integration.cpp  testbaseprotocol.cpp  testclientprotocol.cpp  testprotocolintegration.cpp  testprotocols.cpp  testserverprotocol.cpp
tests/core/: CMakeLists.txt  queuesocket.cpp  sharedsocket.cpp  sharedsocket.h  testermatchdto.cpp  testermatchdto.h
tests/integration/: CMakeLists.txt  benchmark_server.cpp  test_server_integration.cpp  test_server_lobby.cpp  testerclient.cpp  testerclient.h
tests/logic/: CMakeLists.txt  mockobserver.cpp  mockobserver.h  test_logic_integration.cpp
(+118 files in other folders)
